--- a/TorboFile/assets/BaseDictionary.xaml
+++ b/TorboFile/assets/BaseDictionary.xaml
@@ -66,6 +66,13 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
+
+	<Style x:Key="StdGridSplitter" TargetType="GridSplitter">
+		<Setter Property="VerticalAlignment" Value="Stretch"/>
+		<Setter Property="HorizontalAlignment" Value="Stretch"/>
+		<Setter Property="Opacity" Value="0"/>
+		<Setter Property="MaxWidth" Value="4"/>
+	</Style>
 	
 	<Style x:Key="StdButton" TargetType="{x:Type Button}">
 		<Setter Property="BorderBrush" Value="{x:Null}"/>
