--- a/TorboFile/View/Controls/MainViews/FindCopiesView.xaml
+++ b/TorboFile/View/Controls/MainViews/FindCopiesView.xaml
@@ -12,10 +12,9 @@
              xmlns:settings="clr-namespace:TorboFile.Properties"
 			 xmlns:rules="clr-namespace:Lemur.Windows.Validation">
 
-    <!-- Use with FindDuplicatesModel -->
+    <!-- Use with FindCopiesVM -->
 
     <UserControl.Resources>
-
 
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -153,13 +152,13 @@
 			<DockPanel DockPanel.Dock="Top">
 
 				<StackPanel Name="ResultSizePanel" Orientation="Horizontal" DockPanel.Dock="Bottom">
-					<TextBlock Text="{x:Static r:MainStrings.SELECTED_SIZE_MSG}" />
-					<TextBlock Text="{Binding CheckedSize, Converter={StaticResource SizeToString}}" />
+					<TextBlock Text="{x:Static r:MainStrings.SELECTED_SIZE_MSG}" Margin="0,0,4,0" />
+					<TextBlock Text="{Binding ResultsList.CheckedSize, Converter={StaticResource SizeToString}}" />
 				</StackPanel>
 
 				<controls:FileList DockPanel.Dock="Top"
 							   Visibility="{Binding Converter={StaticResource NonNullToVisible}}"
-							    DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Control}, Path=DataContext.ResultsList}">
+							   DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Control}, Path=DataContext.ResultsList}">
 					<controls:FileList.Buttons>
 
 						<Button Style="{StaticResource BtnOpenExternal}" Margin="2,0,2,2"
@@ -169,7 +168,7 @@
                 Command="{Binding CmdShowLocation}" Visibility="{Binding ShowOpenLocationCmd, Converter={StaticResource BoolVisibility}}"/>
 
 						<Button Style="{StaticResource BtnDelete}" Margin="2,0,2,2"
-							Command="{Binding CmdDelete}" 
+							Command="{Binding CmdDelete}"
 							Visibility="{Binding ShowDeleteCmd, Converter={StaticResource BoolVisibility}}" />
 
 					</controls:FileList.Buttons>
