--- a/TorboFile/View/Controls/MainViews/FindCopiesView.xaml
+++ b/TorboFile/View/Controls/MainViews/FindCopiesView.xaml
@@ -20,6 +20,7 @@
 			<ResourceDictionary.MergedDictionaries>
 			</ResourceDictionary.MergedDictionaries>
 			
+			<!-- cURRENLTY UNUSED-->
 			<Style x:Key="ResultsContent" TargetType="ContentControl">
 				<!-- NOTE: Using ContentControl appears to capture the DataContext, whereas ContentPresenter does not. -->
 
@@ -51,6 +52,7 @@
 					</DataTrigger>
 				</Style.Triggers>
 			</Style>
+			
 		</ResourceDictionary>
 	</UserControl.Resources>
 
@@ -153,15 +155,22 @@
 
 			<DockPanel DockPanel.Dock="Top">
 
-				<StackPanel Name="ResultSizePanel" Orientation="Horizontal" DockPanel.Dock="Bottom">
-					<TextBlock Text="{x:Static r:MainStrings.SELECTED_SIZE_MSG}" Margin="0,0,4,0" />
-					<TextBlock Text="{Binding ResultsList.CheckedSize, Converter={StaticResource SizeToString}}" />
-				</StackPanel>
-
 				<controls:FileList DockPanel.Dock="Top"
 							   Visibility="{Binding Converter={StaticResource NonNullToVisible}}"
 							   DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Control}, Path=DataContext.ResultsList}">
 					<controls:FileList.Buttons>
+
+						<StackPanel Orientation="Horizontal" VerticalAlignment="Center"
+							Visibility="{Binding Converter={StaticResource NonNullToVisible}}" Margin="0,0,24,0">
+							<StackPanel Margin="0,0,12,0" Orientation="Horizontal" HorizontalAlignment="Left">
+								<TextBlock Text="{x:Static r:MainStrings.SELECTED_SIZE_MSG}" Margin="0,0,4,0" />
+								<TextBlock Text="{Binding CheckedSize, Converter={StaticResource SizeToString}}" />
+							</StackPanel>
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="Items Selected:" Margin="0,0,4,0" />
+								<TextBlock Text="{Binding CheckedCount}" />
+							</StackPanel>
+						</StackPanel>
 
 						<Button Style="{StaticResource BtnOpenExternal}" Margin="2,0,2,2"
                 Command="{Binding CmdOpenChecked}" Visibility="{Binding ShowOpenCmd, Converter={StaticResource BoolVisibility}}" />
